--- a/Frontend/Landing_page/src/app/Landing Page/footer/footer.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/footer/footer.component.html
@@ -12,18 +12,18 @@
       <div class="footer-col">
         <h5>Quick Links</h5>
         <ul class="footer-links">
-          <li><a routerLink="#">Home</a></li>
-          <li><a routerLink="#booking">Booking</a></li>
-          <li><a routerLink="#service-list">Services</a></li>
-          <li><a routerLink="#contact">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#booking">Booking</a></li>
+          <li><a href="#service-list">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h5>Services</h5>
         <ul class="footer-links">
-          <li><a routerLink="#booking">Schedule a Test Drive</a></li>
-          <li><a routerLink="#service-list">24x7 Assistance</a></li>
-          <li><a routerLink="#service-list">Value Care</a></li>
+          <li><a href="#booking">Schedule a Test Drive</a></li>
+          <li><a href="#service-list">24x7 Assistance</a></li>
+          <li><a href="#service-list">Value Care</a></li>
         </ul>
       </div>
       <div class="footer-col">
@@ -33,7 +33,7 @@
           <li><a href="https://www.renault.co.in/">Renault India</a></li>
           <li><a href="https://www.nissan.in/">Nissan India</a></li>
           <li>
-            <a href="https://mitsubishielectric.in/">Mitsubishi Motors</a>
+            <a href="https://www.mitsubishicars.com/">Mitsubishi Motors</a>
           </li>
         </ul>
       </div>
@@ -51,13 +51,10 @@
         <div class="container" id="Copyright">
           <div class="row">
             <div class="col-12 text-center">
-              <p>&copy; {{ currentYear }} Company Name. All Rights Reserved.</p>
+              <p>&copy; {{ currentYear }} MyRNM. All Rights Reserved.</p>
               <div>
-                <a href="/privacy-policy" class="footer-link">Privacy Policy</a>
-                |
-                <a href="/terms-of-service" class="footer-link"
-                  >Terms of Service</a
-                >
+                <a href="/privacy" class="footer-link">Privacy Policy</a>
+               
               </div>
             </div>
           </div>
