--- a/Frontend/Landing_page/src/app/Admin/showrooms/showrooms.component.html
+++ b/Frontend/Landing_page/src/app/Admin/showrooms/showrooms.component.html
@@ -1,7 +1,8 @@
 <app-admin-header></app-admin-header>
 
 <div class="container mt-4" id="showroom">
-  <h2 class="text-center mb-4" style="text-align: left;">MyRNM Showrooms in India</h2><br><br>
+  <br>
+  <h2 class="text-center mb-4 font">MyRNM Showrooms in India</h2><br><br>
   
   <!-- Renault Showrooms -->
   <!-- <div class="row">
