--- a/Frontend/Landing_page/src/app/Landing Page/feedback/feedback.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/feedback/feedback.component.html
@@ -24,7 +24,7 @@
         <div class="card-body mt-4 w-100">
           <div class="card-title text-center mb-2">
             <i class="fas fa-comment-dots fa-3x" style="color: #8347ad;"></i>
-            <h2 class="text-center mb-4">We Value Your Feedback</h2>
+            <h2 class="text-center mb-4 font">We Value Your Feedback</h2>
           </div>
           <form [formGroup]="feedbackForm" (ngSubmit)="submit()">
             <div class="form-group mb-3">
