--- a/Frontend/Landing_page/src/app/Admin/bookings/bookings.component.html
+++ b/Frontend/Landing_page/src/app/Admin/bookings/bookings.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid mt-4" id="book">
   <!-- Page Header -->
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2>Bookings</h2>
+    <h2 class="font">Bookings</h2>
   </div>
 
   <!-- Search Bar -->
