--- a/Frontend/Landing_page/src/app/Admin/query/query.component.css
+++ b/Frontend/Landing_page/src/app/Admin/query/query.component.css
@@ -32,7 +32,7 @@ h2 {
   color: #333;
   font-weight: 600;
   margin-bottom: 20px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 /* Form Group (Flexbox Layout) */
