--- a/Frontend/Landing_page/src/app/Admin/users/users.component.html
+++ b/Frontend/Landing_page/src/app/Admin/users/users.component.html
@@ -3,7 +3,7 @@
 
   <!-- Page Header -->
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2 class="page-title">Users</h2>
+    <h2 class="page-title font">Users</h2>
   </div>
 
   <!-- Search Bar -->
