--- a/Frontend/Landing_page/src/app/Landing Page/home/home.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/home/home.component.html
@@ -23,8 +23,8 @@
             <source src="renault_video1.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Renault Triber: The Adventure Begins Here</h3>
+          <div class="carousel-caption d-md-block">
+            <h1>Renault Triber: The Adventure Begins Here</h1>
               <h5>
                 With bold performance, spacious interiors, and unbeatable reliability, the Renault Duster is built to take on any road, any journey. Ready to explore more?            </h5>
                 <br><br><br><br>
