--- a/Frontend/Landing_page/src/app/Admin/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Landing_page/src/app/Admin/admin-dashbaord/admin-dashbaord.component.html
@@ -11,20 +11,21 @@
           </div>
         </div>
         <!-- end col -->
-    
+
         <!-- end col -->
       </div>
       <!-- end row -->
     </div>
     <!-- ========== title-wrapper end ========== -->
     <div class="row">
-      <div class="col-xl-3 col-lg-4 col-sm-6 ">
+      <div class="col-xl-3 col-lg-4 col-sm-6">
         <div class="icon-card mb-30">
           <div class="icon purple">
-            <i class="bi bi-person-plus-fill"></i>          </div>
+            <i class="bi bi-person-plus-fill"></i>
+          </div>
           <div class="content">
             <h6 class="mb-10">New Users</h6>
-            <h3 class="text-bold mb-10">{{last30}}</h3>
+            <h3 class="text-bold mb-10">{{ last30 }}</h3>
             <p class="text-sm text-success">
               <span class="text-gray">(30 days)</span>
             </p>
@@ -36,10 +37,11 @@
       <div class="col-xl-3 col-lg-4 col-sm-6">
         <div class="icon-card mb-30">
           <div class="icon success">
-            <i class="bi bi-people-fill"></i>          </div>
+            <i class="bi bi-people-fill"></i>
+          </div>
           <div class="content">
             <h6 class="mb-10">Total Registered Users</h6>
-            <h3 class="text-bold mb-10">{{totalusers}}</h3>
+            <h3 class="text-bold mb-10">{{ totalusers }}</h3>
             <p class="text-sm text-success">
               <span class="text-gray">(MyRNM)</span>
             </p>
@@ -55,7 +57,7 @@
           </div>
           <div class="content">
             <h6 class="mb-10">Total Showrooms</h6>
-            <h3 class="text-bold mb-10">{{showroomcount}}</h3>
+            <h3 class="text-bold mb-10">{{ showroomcount }}</h3>
             <p class="text-sm text-success">
               <span class="text-gray">(India)</span>
             </p>
@@ -67,10 +69,11 @@
       <div class="col-xl-3 col-lg-4 col-sm-6">
         <div class="icon-card mb-30">
           <div class="icon orange">
-            <i class="bi bi-patch-check-fill"></i>          </div>
+            <i class="bi bi-patch-check-fill"></i>
+          </div>
           <div class="content">
             <h6 class="mb-10">User Satisfaction</h6>
-            <h3 class="text-bold mb-10">{{usersatisfaction}} %</h3>
+            <h3 class="text-bold mb-10">{{ usersatisfaction }} %</h3>
             <p class="text-sm text-success">
               <span class="text-gray"> (From Feedback data)</span>
             </p>
@@ -88,11 +91,10 @@
             <div class="left">
               <h6 class="text-medium mb-10">User Registration Stats</h6>
             </div>
-           
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart1" style="width: 100%; height: 400px; "></canvas>
+            <canvas id="Chart1" style="width: 100%; height: 400px"></canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -100,15 +102,16 @@
       <!-- End Col -->
       <div class="col-lg-5">
         <div class="card-style mb-30">
-          <div class="title d-flex flex-wrap align-items-center justify-content-between">
+          <div
+            class="title d-flex flex-wrap align-items-center justify-content-between"
+          >
             <div class="left">
               <h6 class="text-medium mb-30">Car Bookings</h6>
             </div>
-            
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart2" style="width: 100%; height: 400px; "></canvas>
+            <canvas id="Chart2" style="width: 100%; height: 400px"></canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -116,38 +119,30 @@
       <!-- End Col -->
       <div class="col">
         <div id="legend3">
-            <div class="title d-flex flex-wrap justify-content-between">
-              <div class="left">
-                <h6 class="text-medium mb-10">Cars Registered by Users </h6>
-              </div>
-             
+          <div class="title d-flex flex-wrap justify-content-between">
+            <div class="left">
+              <h6 class="text-medium mb-10">Cars Registered by Users</h6>
             </div>
+          </div>
         </div>
-        <canvas id="Chart3" style="width: 100%; height: 450px;"></canvas>
+        <canvas id="Chart3" style="width: 100%; height: 450px"></canvas>
       </div>
 
       <div class="col-lg-5">
         <div class="card-style mb-30">
-          <div class="title d-flex flex-wrap align-items-center justify-content-between">
+          <div
+            class="title d-flex flex-wrap align-items-center justify-content-between"
+          >
             <div class="left">
               <h6 class="text-medium mb-2">Feedback Analysis</h6>
             </div>
-            <!-- <div class="right">
-              <div class="select-style-1 mb-2">
-                <div class="select-position select-sm">
-                  <select class="bg-light"  [(ngModel)]="selectedYear">
-                    <option value="y2024">2024</option>
-                    <option value="y2025">2025</option>
-                  </select>
-                </div>
-              </div>
-               end select 
-            </div> -->
           </div>
           <!-- End Title -->
           <div class="chart">
             <div id="legend4">
-              <ul class="legend3 d-flex flex-wrap gap-3 gap-sm-0 align-items-center mb-30">
+              <ul
+                class="legend3 d-flex flex-wrap gap-3 gap-sm-0 align-items-center mb-30"
+              >
                 <li>
                   <div class="d-flex">
                     <span class="bg-color primary-bg"> </span>
@@ -155,7 +150,7 @@
                       <p class="text-sm text-success">
                         <span class="text-dark">Positive feedbacks</span>
                       </p>
-                      <h2>{{totalpositive}}</h2>
+                      <h2>{{ totalpositive }}</h2>
                     </div>
                   </div>
                 </li>
@@ -164,21 +159,19 @@
                     <span class="bg-color danger-bg"></span>
                     <div class="text">
                       <p class="text-sm text-danger">
-                        <span class="text-dark">Negative Feedbacks</span> 
+                        <span class="text-dark">Negative Feedbacks</span>
                       </p>
-                      <h2>{{totalnegative}}</h2>
+                      <h2>{{ totalnegative }}</h2>
                     </div>
                   </div>
                 </li>
               </ul>
             </div>
-            <canvas id="Chart4" style="width: 100%; height: 420px;"></canvas>
+            <canvas id="Chart4" style="width: 100%; height: 420px"></canvas>
           </div>
           <!-- End Chart -->
         </div>
       </div>
     </div>
-    
- </div>
-</section> 
-   
+  </div>
+</section>
