--- a/Frontend/Landing_page/src/app/Admin/bookings/bookings.component.css
+++ b/Frontend/Landing_page/src/app/Admin/bookings/bookings.component.css
@@ -108,7 +108,7 @@
 }
 #book {
   margin-left: 250px;
-   /* Adjust based on the width of the navbar */
+  /* Adjust based on the width of the navbar */
   width: calc(
     100% - 250px
   ); /* Make the dashboard take the rest of the available space */
@@ -116,7 +116,6 @@
   box-sizing: border-box;
 }
 
-.table-responsive
-{
- width: 100%;
+.table-responsive {
+  width: 100%;
 }
