--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.css
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.css
@@ -10,12 +10,13 @@
   color: white;
   animation: bounceIn 2s ease-in-out;
   background-color: white;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .header-title {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 .header-title {
@@ -34,7 +35,6 @@
   color: whitesmoke;
   margin-top: 0.5rem;
   color: black;
-
 }
 
 .home-icon {
@@ -48,8 +48,6 @@
   height: 40px;
   cursor: pointer;
 }
-
-
 
 .main-body {
   display: flex;
@@ -99,7 +97,8 @@
 .question-wrapper {
   display: flex;
   align-items: center;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   margin-bottom: 1rem;
 }
 
@@ -111,11 +110,10 @@
 }
 
 .question-text {
-
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   font-family: "Quintessential", serif;
-    font-weight: 800;
+  font-weight: 800;
 
   font-style: bold;
   /* text-transform: uppercase; */
@@ -642,7 +640,6 @@
   }
 }
 
-
 .stars {
   display: inline-block;
 }
@@ -662,9 +659,7 @@
   /* top: 7px; */
   width: 32px;
   height: 29px;
-
 }
-
 
 .cycling-image {
   width: 60%;
@@ -1040,7 +1035,6 @@
   }
 }
 
-
 .form-check input {
   display: none;
 }
@@ -1116,7 +1110,6 @@ button.submit-btn:hover {
     width: 100%;
     animation: fadeIn 0.3s ease-out;
   } */
-
 
 /* Basic reset */
 * {
@@ -1213,7 +1206,6 @@ button.submit-btn:hover {
   padding: 10px;
 } */
 
-
 .test-drive-dialog {
   position: fixed;
   top: -10px;
@@ -1305,7 +1297,6 @@ button.submit-btn:hover {
   }
 }
 
-
 .test-drive-form {
   display: flex;
   flex-direction: column;
@@ -1368,7 +1359,8 @@ button.submit-btn:hover {
     height: auto;
   }
 
-  .car-info, .test-drive-form {
+  .car-info,
+  .test-drive-form {
     width: 100%;
   }
 }
@@ -1389,7 +1381,7 @@ button.submit-btn:hover {
 .formbold-steps {
   padding-bottom: 18px;
   margin-bottom: 35px;
-  border-bottom: 1px solid #DDE3EC;
+  border-bottom: 1px solid #dde3ec;
 }
 
 .formbold-steps ul {
@@ -1414,7 +1406,7 @@ button.submit-btn:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #DDE3EC;
+  background: #dde3ec;
   border-radius: 50%;
   width: 36px;
   height: 36px;
@@ -1430,7 +1422,7 @@ button.submit-btn:hover {
 
 .formbold-steps li.active span {
   background: #46cd15;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .formbold-input-flex {
@@ -1447,8 +1439,8 @@ button.submit-btn:hover {
   width: 100%;
   padding: 13px 22px;
   border-radius: 5px;
-  border: 1px solid #DDE3EC;
-  background: #FFFFFF;
+  border: 1px solid #dde3ec;
+  background: #ffffff;
   font-weight: 500;
   font-size: 16px;
   color: #536387;
@@ -1462,7 +1454,7 @@ button.submit-btn:hover {
 }
 
 .formbold-form-label {
-  color: #07074D;
+  color: #07074d;
   font-weight: 500;
   font-size: 14px;
   line-height: 24px;
@@ -1471,7 +1463,7 @@ button.submit-btn:hover {
 }
 
 .formbold-form-confirm {
-  border-bottom: 1px solid #DDE3EC;
+  border-bottom: 1px solid #dde3ec;
   padding-bottom: 35px;
 }
 
@@ -1492,15 +1484,15 @@ button.submit-btn:hover {
   display: flex;
   align-items: center;
   gap: 10px;
-  background: #FFFFFF;
-  border: 0.5px solid #DDE3EC;
+  background: #ffffff;
+  border: 0.5px solid #dde3ec;
   border-radius: 5px;
   font-size: 16px;
   line-height: 24px;
   color: #536387;
   cursor: pointer;
   padding: 10px 20px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .formbold-confirm-btn {
@@ -1508,8 +1500,8 @@ button.submit-btn:hover {
 }
 
 .formbold-confirm-btn.active {
-  background: #6A64F1;
-  color: #FFFFFF;
+  background: #6a64f1;
+  color: #ffffff;
 }
 
 .formbold-form-step-1,
@@ -1534,9 +1526,9 @@ button.submit-btn:hover {
 
 .formbold-back-btn {
   cursor: pointer;
-  background: #FFFFFF;
+  background: #ffffff;
   border: none;
-  color: #07074D;
+  color: #07074d;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -1557,11 +1549,10 @@ button.submit-btn:hover {
 
   border: none;
   font-weight: 500;
-  background-color: #6A64F1;
+  background-color: #6a64f1;
   color: white;
   cursor: pointer;
 }
-
 
 .formbold-btn:hover {
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
@@ -1633,7 +1624,6 @@ button:disabled {
   animation: slideUp 1s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
@@ -1685,17 +1675,16 @@ button:disabled {
   margin-right: 20px;
 }
 
-
-.showroom{
+.showroom {
   font-weight: bold;
 }
 
-.size{
+.size {
   font-size: 40px;
   /* background: #000; */
 }
 
-.size1{
+.size1 {
   font-size: 40px;
   position: relative;
   left: 25%;
@@ -1706,7 +1695,6 @@ button:disabled {
   text-align: center;
   display: flex;
   justify-content: center;
-
 }
 
 .card-body .brand-name {
@@ -1780,11 +1768,16 @@ button:disabled {
 }
 
 @keyframes blink {
-  0%, 100% { opacity: 1; }
-  50% { opacity: 0; }
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
 
-.smallthun{
+.smallthun {
   width: 45px;
   height: 48px;
 }
