--- a/Frontend/Landing_page/src/app/Admin/notifications/notifications.component.css
+++ b/Frontend/Landing_page/src/app/Admin/notifications/notifications.component.css
@@ -163,7 +163,9 @@
 
 .container-fluid {
   margin-left: 250px; /* Adjust based on the width of the navbar */
-  width: calc(100% - 250px); /* Make the dashboard take the rest of the available space */
+  width: calc(
+    100% - 250px
+  ); /* Make the dashboard take the rest of the available space */
   padding: 20px;
   box-sizing: border-box;
 }
