--- a/Frontend/Landing_page/src/app/Admin/user-feedback/user-feedback.component.html
+++ b/Frontend/Landing_page/src/app/Admin/user-feedback/user-feedback.component.html
@@ -1,33 +1,46 @@
-
 <app-admin-header></app-admin-header>
 <div class="container mt-4" id="feedback">
   <!-- Page Header -->
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>User Feedback</h2>
   </div>
-  <br>
+  <br />
 
   <!-- Feedback Cards -->
   <div class="card-style">
-    <div *ngFor="let feedback of displayedFeedback; let i = index" class="single-notification">
+    <div
+      *ngFor="let feedback of displayedFeedback; let i = index"
+      class="single-notification"
+    >
       <div class="notification">
         <div class="image info-bg" id="bgimg" [ngClass]="getBackgroundClass(i)">
-          <span>{{ feedback.userName.charAt(0) }}</span> <!-- First letter of user -->
+          <span>{{ feedback.userName.charAt(0) }}</span>
+          <!-- First letter of user -->
         </div>
         <a href="#0" class="content">
           <h6>{{ feedback.userName }}</h6>
           <p class="text-sm text-gray">{{ feedback.feedback }}</p>
-          <span class="text-sm text-medium text-gray">{{ feedback.userEmail }}</span>
+          <span class="text-sm text-medium text-gray">{{
+            feedback.userEmail
+          }}</span>
         </a>
       </div>
       <div class="action">
         <button class="delete-btn" (click)="deleteFeedback(feedback)">
           <i class="lni lni-trash-can"></i>
         </button>
-        <button class="more-btn dropdown-toggle" id="moreAction" data-bs-toggle="dropdown" aria-expanded="false">
+        <button
+          class="more-btn dropdown-toggle"
+          id="moreAction"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
           <i class="lni lni-more-alt"></i>
         </button>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="moreAction">
+        <ul
+          class="dropdown-menu dropdown-menu-end"
+          aria-labelledby="moreAction"
+        >
           <li class="dropdown-item">
             <a href="#0" class="text-gray">Reply</a>
           </li>
@@ -39,11 +52,12 @@
 
   <!-- Load More Button -->
   <div class="text-center mt-4">
-    <button *ngIf="displayedFeedback.length < feedbackList.length" 
-            class="btn btn-primary" 
-            (click)="loadMore()">
+    <button
+      *ngIf="displayedFeedback.length < feedbackList.length"
+      class="btn btn-primary"
+      (click)="loadMore()"
+    >
       Load More
     </button>
   </div>
 </div>
-
