--- a/Frontend/Landing_page/src/app/Landing Page/home/home.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/home/home.component.html
@@ -23,10 +23,10 @@
             <source src="renault_video1.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Renault Triber: The Adventure Begins Here</h3>
-              <h5>
-                With bold performance, spacious interiors, and unbeatable reliability, the Renault Duster is built to take on any road, any journey. Ready to explore more?            </h5>
+          <div class="carousel-caption  d-md pos">
+            <h1><b>Renault Triber: The Adventure Begins Here</b></h1>
+              <h4>
+                With bold performance, spacious interiors, and unbeatable reliability, the Renault Duster is built to take on any road, any journey. Ready to explore more?            </h4>
                 <br><br><br><br>
           </div>
         </div>
@@ -35,11 +35,11 @@
             <source src="nissan.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Nissan Magnite: Big on Style, Compact in Size</h3>
-            <h5>
+          <div class="carousel-caption d-md pos">
+            <h1><b>Nissan Magnite: Big on Style, Compact in Size </b> </h1>
+            <h4>
               Designed to stand out with bold looks, packed with smart features, and offering a thrilling drive. The Nissan Magnite is the perfect companion for those who crave adventure in a compact package
-            </h5>
+            </h4>
             <br><br><br><br>
           </div>
         </div>
@@ -48,11 +48,11 @@
             <source src="mits.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Mitsubishi XForce: Unleash Your Boldness</h3>
-            <h5>
+          <div class="carousel-caption d-md pos">
+            <h1><b>Mitsubishi XForce: Unleash Your Boldness</b> </h1>
+            <h4>
               With striking design, powerful performance, and rugged versatility, the Mitsubishi XForce is built to take you beyond the ordinary. Ready for your next big adventure?
-            </h5>
+            </h4>
             <br><br><br><br>
           </div>
         </div>
