--- a/Frontend/Landing_page/src/app/Landing Page/chatbot/chatbot.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/chatbot/chatbot.component.html
@@ -1,47 +1,63 @@
 <div class="chatbot-icon" (click)="toggleChat()">
   <button type="button" aria-label="Open" class="css-15q8v64 e13411jb0">
-    <img src="chatbot.svg" alt="Chatbot Icon" width="40" height="40">
+    <img src="chatbot.svg" alt="Chatbot Icon" width="40" height="40" />
   </button>
 </div>
- 
- 
-<div class="chat-container" [ngClass]="{ 'open': isChatOpen }">
+
+<div class="chat-container" [ngClass]="{ open: isChatOpen }">
   <div class="chat-header">
     <div class="col">
       <button class="close-btn" (click)="toggleChat()">✖</button>
     </div>
     <!-- Close Button -->
-   
- 
+
     <button *ngIf="isOnPage" class="home-btn btn ms-2" (click)="goBack()">
-      <i class="fa fa-home"></i> <!-- Font Awesome Home Icon -->
-  </button>
- 
-    <h3 style="text-align: center; font-weight: bold;font-size: large;">MyRnm Chatbot</h3>
+      <i class="fa fa-home"></i>
+      <!-- Font Awesome Home Icon -->
+    </button>
+
+    <h3 style="text-align: center; font-weight: bold; font-size: large">
+      MyRnm Chatbot
+    </h3>
   </div>
- 
+
   <div class="chat-window">
     <!-- Messages Section -->
-    <div *ngFor="let message of messages" class="message" [ngClass]="{
-      'from-bot': message.sender === 'bot',
-      'from-option': message.sender === 'option',
-      'from-special-bot': message.isSpecial === true
-    }">
+    <div
+      *ngFor="let message of messages"
+      class="message"
+      [ngClass]="{
+        'from-bot': message.sender === 'bot',
+        'from-option': message.sender === 'option',
+        'from-special-bot': message.isSpecial === true
+      }"
+    >
       <div class="message-text">{{ message.text }}</div>
     </div>
- 
+
     <!-- Loading Indicator -->
     <div *ngIf="isLoading" class="loading">Loading...</div>
- 
-    <div *ngIf="isChatOpen && !isLoading && options.length > 0" class="button-container">
-      <button *ngFor="let option of options" (click)="onOptionSelected(option)" id="btn-style">
+
+    <div
+      *ngIf="isChatOpen && !isLoading && options.length > 0"
+      class="button-container"
+    >
+      <button
+        *ngFor="let option of options"
+        (click)="onOptionSelected(option)"
+        id="btn-style"
+      >
         {{ option }}
       </button>
     </div>
- 
- 
+
     <!-- User Input Form -->
-    <form [formGroup]="form" (ngSubmit)="sendMessage()" class="user-input-form" *ngIf="isChatOpen && !isLoading && !isOnPage">
+    <form
+      [formGroup]="form"
+      (ngSubmit)="sendMessage()"
+      class="user-input-form"
+      *ngIf="isChatOpen && !isLoading && !isOnPage"
+    >
       <input formControlName="message" placeholder="Type your message..." />
       <button type="submit">Send</button>
     </form>
