--- a/Frontend/Landing_page/src/app/Landing Page/home/home.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/home/home.component.html
@@ -1,5 +1,3 @@
-
-
 <app-header></app-header>
 <section class="home" id="home">
   <div class="video-contanier">
@@ -25,9 +23,12 @@
           </video>
           <div class="carousel-caption d-md-block">
             <h1>Renault Triber: The Adventure Begins Here</h1>
-              <h5>
-                With bold performance, spacious interiors, and unbeatable reliability, the Renault Duster is built to take on any road, any journey. Ready to explore more?            </h5>
-                <br><br><br><br>
+            <h5>
+              With bold performance, spacious interiors, and unbeatable
+              reliability, the Renault Duster is built to take on any road, any
+              journey. Ready to explore more?
+            </h5>
+            <br /><br /><br /><br />
           </div>
         </div>
         <div class="carousel-item">
@@ -38,9 +39,11 @@
           <div class="carousel-caption d-none d-md-block">
             <h3>Nissan Magnite: Big on Style, Compact in Size</h3>
             <h5>
-              Designed to stand out with bold looks, packed with smart features, and offering a thrilling drive. The Nissan Magnite is the perfect companion for those who crave adventure in a compact package
+              Designed to stand out with bold looks, packed with smart features,
+              and offering a thrilling drive. The Nissan Magnite is the perfect
+              companion for those who crave adventure in a compact package
             </h5>
-            <br><br><br><br>
+            <br /><br /><br /><br />
           </div>
         </div>
         <div class="carousel-item">
@@ -51,9 +54,11 @@
           <div class="carousel-caption d-none d-md-block">
             <h3>Mitsubishi XForce: Unleash Your Boldness</h3>
             <h5>
-              With striking design, powerful performance, and rugged versatility, the Mitsubishi XForce is built to take you beyond the ordinary. Ready for your next big adventure?
+              With striking design, powerful performance, and rugged
+              versatility, the Mitsubishi XForce is built to take you beyond the
+              ordinary. Ready for your next big adventure?
             </h5>
-            <br><br><br><br>
+            <br /><br /><br /><br />
           </div>
         </div>
       </div>
@@ -78,14 +83,6 @@
     </div>
   </div>
 </section>
-<!-- <section class="home" id="home">
-  <div class="video-container">
-    <video class="d-block w-100" autoplay muted loop>
-      <source src="renault_video1.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-  </div>
-</section> -->
 
 <app-booking></app-booking>
 <app-service-list></app-service-list>
@@ -96,4 +93,3 @@
 <app-logo></app-logo>
 
 <app-footer></app-footer>
-
