--- a/Frontend/Landing_page/src/app/Landing Page/contact/contact.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/contact/contact.component.html
@@ -29,7 +29,7 @@
       <!-- Right Column (Contact Form) -->
       <div class="col-md-6">
         <div class="card p-4" style="background-color: #cecece;">
-          <h3 class="card-title mb-4">Send us a Message</h3>
+          <h3 class="card-title mb-4 display-3">Send us a Message</h3>
           <form [formGroup]="contact" (ngSubmit)="onsubmit()">
             <!-- Email Input -->
             <div class="mb-3">
