--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="page-container" [class.shifted]="isFilterSidebarOpen">
+<div class="page-container" [class.shifted]="isFilterSidebarOpen" id="cardetails">
   <header class="header-section">
     <h1 class="header-title">Online Test Drive Booking</h1>
     <p class="header-subtitle">Driving your dreams forward</p>
@@ -502,7 +502,7 @@
 
         <div>
           <label for="address" class="formbold-form-label">Address</label>
-          <input type="text" name="address" id="address" placeholder="Enter your address" class="formbold-form-input"
+          <input type="text" name="address" id="address" readonly placeholder="Enter your address" class="formbold-form-input"
             [(ngModel)]="formData.address" />
         </div>
       </div>
